--- a/views/pages/new.ejs
+++ b/views/pages/new.ejs
@@ -1,6 +1,5 @@
 <%- include('../partials/header') %>
 <main>
-    <h1>Home Pagess</h1>
+  <h1>New Message Form</h1>
 </main>
-
 <%- include('../partials/footer') %>
