--- a/views/partials/form.ejs
+++ b/views/partials/form.ejs
@@ -1,1 +1,10 @@
-<form action="/"></form>
+<h1>New Message Form</h1>
+<form action="/new" method="POST">
+  <label for="author">Name:</label>
+  <input type="text" name="author" id="author">
+
+  <label for="message">Message:</label>
+  <input type="text" name="message" id="message">
+
+  <button type="submit">Send</button>
+</form>
