feat: add middleware to of urlEncoded to access req.body

--- a/views/pages/new.ejs
+++ b/views/pages/new.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/header') %>
 <main>
-  <h1>New Message Form</h1>
+<%- include('../partials/form') %>
 </main>
 <%- include('../partials/footer') %>
