--- a/views/partials/form.ejs
+++ b/views/partials/form.ejs
@@ -3,8 +3,8 @@
   <label for="author">Name:</label>
   <input type="text" name="author" id="author">
 
-  <label for="message">Message:</label>
-  <input type="text" name="message" id="message">
+  <label for="messageText">Message:</label>
+  <input type="text" name="messageText" id="messageText">
 
   <button type="submit">Send</button>
 </form>
