--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,6 +8,7 @@
             <p><%= message.text %></p>
             <p>From: <%= message.user %></p>
             <p>Posted on: <%= message.added %></p>
+            <p><a href="#">Open</a></p>
         </div>
         <% }) %>
     </div>
