--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,6 +5,7 @@
     <div>
         <% messages.forEach( (message) => { %>
         <div>
+            <p>ID: <%= message.id %></p>
             <p><%= message.text %></p>
             <p>From: <%= message.user %></p>
             <p>Posted on: <%= message.added %></p>
