--- a/views/pages/message.ejs
+++ b/views/pages/message.ejs
@@ -1,3 +1,7 @@
 <%- include('../partials/header') %>
 <h1>Message</h1>
+<p><%= message. id %></p>
+<p><%= message.text %></p>
+<p><%= message.user %></p>
+<p><%= message.added %></p>
 <%- include('../partials/footer') %>
