--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,7 +4,7 @@
     <h2>Messages</h2>
     <div>
         <% messages.forEach( (message) => { %>
-        <div>
+        <div class="card">
             <p><%= message.text %></p>
             <p>From: <%= message.user %></p>
             <p>Posted on: <%= message.added %></p>
