feat: add navbar partial and refactor footer partial to link a go back to home when not in index page

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,8 +1,9 @@
 <%- include('../partials/header') %>
+<%- include('../partials/navbar') %>
 <main>
     <h1>Home Pages</h1>
     <h2>Messages</h2>
-    <div>
+    <div class="card">
         <% messages.forEach( (message) => { %>
         <div class="card">
             <p><%= message.text %></p>
