--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,10 @@
 
 <div>
-    Copyright 2025
+    <% if(title !== 'Homepage') { %>
+      <a href="/">Go Back to Home</a>
+    <% } %>
+    
+    <p>Copyright 2025</p>
 </div>
 </body>
 </html>
