fix: error when querying, add option to dotenv config to override environment variables, refactor renderIndex on the indexController to be an async function to use await on the query method to the db, passed result to object messages

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,8 +6,8 @@
     <div class="card">
         <% messages.forEach( (message) => { %>
         <div class="card">
-            <p><%= message.text %></p>
-            <p>From: <%= message.user %></p>
+            <p><%= message.data %></p>
+            <p>From: <%= message.username %></p>
             <p>Posted on: <%= message.added %></p>
             <p><a href="/messages/<%= message.id%>">Open</a></p>
         </div>
