feat: add query to get a message by their id and refactored controller to use the query, also refactored the view file to use data and username for text and user

--- a/views/pages/message.ejs
+++ b/views/pages/message.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %>
 <h1>Message</h1>
-<p><%= message. id %></p>
-<p><%= message.text %></p>
-<p><%= message.user %></p>
-<p><%= message.added %></p>
+<p>ID: <%= message.id %></p>
+<p>Message: <%= message.data %></p>
+<p>User: <%= message.username %></p>
+<p>Created At: <%= message.added %></p>
 <%- include('../partials/footer') %>
