feat: add validation logic on the newController, and add new partial for validation errors to show

--- a/views/pages/new.ejs
+++ b/views/pages/new.ejs
@@ -1,5 +1,7 @@
 <%- include('../partials/header') %>
 <main>
+
 <%- include('../partials/form') %>
+<%- include('../partials/errors') %>
 </main>
 <%- include('../partials/footer') %>
